updated classes